--- a/mezzanine/instagram/templates/instagram/instagram.html
+++ b/mezzanine/instagram/templates/instagram/instagram.html
@@ -2,5 +2,7 @@
 {% block main %}
   {% for instagram in media %}
   <img src="{{ instagram.images.thumbnail.url }}" width="{{ instagram.images.thumbnail.width }}" height="{{ instagram.images.thumbnail.height }}">
+  {% empty %}
+  <p>There're no images to display.</p>
   {% endfor %}
 {% endblock main %}
